--- a/_staff_members/공학설계 프로젝.md
+++ b/_staff_members/공학설계 프로젝.md
@@ -1,6 +1,6 @@
 ---
-name: 팀 어벤져스
-position: 통조림을 위험하지 않게 따는 방법 
+name: 공학설계
+position: 브레인스토밍, 문제 인식 정의문
 image_path: "https://github.com/user-attachments/assets/993c0ff6-d2bb-4c19-8fd2-957315abbcd9"
 github_link: https://docs.google.com/presentation/d/1oEGSo_PfxoZ0Pn0Ssx9LikQvuwMuSBqi/edit?usp=drive_link&ouid=117274979527861639139&rtpof=true&sd=true
 twitter_username: CloudCannon
